[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scoreboard/common/scoreboard_theme.tres" type="Theme" id=1]
[ext_resource path="res://Scoreboard/step_3/Scoreboard_v3.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scoreboard/step_3/ScoreForm_v2.gd" type="Script" id=3]

[node name="ScoreForm_v2" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 469.0
margin_top = 215.0
margin_right = -469.0
margin_bottom = -215.0
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_bottom = 62.0
size_flags_vertical = 8

[node name="NameField" type="LineEdit" parent="HBoxContainer"]
margin_right = 465.0
margin_bottom = 62.0
size_flags_horizontal = 3
placeholder_text = "Enter your name"

[node name="PointsField" type="LineEdit" parent="HBoxContainer"]
margin_left = 469.0
margin_right = 934.0
margin_bottom = 62.0
size_flags_horizontal = 3
text = "1000"

[node name="OkButton" type="Button" parent="HBoxContainer"]
margin_left = 938.0
margin_right = 982.0
margin_bottom = 62.0
text = "Ok"

[node name="Scoreboard" parent="." instance=ExtResource( 2 )]
visible = false

[connection signal="pressed" from="HBoxContainer/OkButton" to="." method="_on_OkButton_pressed"]
